[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-passport"
version = "1.0.0a1"
description = "Reference Python implementation of the Context Passport open standard for AI agent events."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Context Passport maintainers" }
]
requires-python = ">=3.9"
keywords = ["ai", "agents", "context-passport", "audit", "verification", "provenance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
signing   = ["cryptography>=42.0"]
langgraph = ["langchain-core>=0.3.0", "langgraph>=0.2.0"]
dev       = ["pytest>=7.0", "langchain-core>=0.3.0"]

[project.urls]
Homepage      = "https://contextpassport.com"
Specification = "https://github.com/contextpassport/spec"
Repository    = "https://github.com/contextpassport/python"
Issues        = "https://github.com/contextpassport/python/issues"

[tool.setuptools.packages.find]
where = ["src"]
